AC_PREREQ([2.53])
AC_INIT(rlm_raw.c) 
AC_REVISION($Revision$)
AC_DEFUN(modname,[rlm_raw]) 

if test x$with_[]modname != xno; then

	AC_PROG_CC
	AC_PROG_CPP

	dnl put configuration checks here.
	dnl set $fail to what's missing, on fatal errors.
	dnl use AC_MSG_WARN() on important messages.
	AC_CHECK_LIB(c, printf,
		[ example_ldflags="$example_ldflags -lc" ],
		[ fail=$fail" printf" ]
	)

	AC_CHECK_HEADER(stdio.h,
		[ example_cflags="$example_cflags -I/usr/include" ],
		[ fail=$fail" stdio.h" ]
	)

	AC_CHECK_HEADERS(stdio.h stdlib.h)  # for the config.h defs
	AC_CHECK_FUNCS(printf)  # for the config.h defs

	targetname=modname     # keep this!  Don't change!
else
	targetname=            # keep this!  Don't change!
	echo \*\*\* module modname is disabled.  # keep this!  Don't change!
fi

dnl  Don't change this section.
if test x"$fail" != x""; then
	if test x"${enable_strict_dependencies}" = x"yes"; then
		AC_MSG_ERROR([set --without-]modname[ to disable it explicitly.])
	else
		AC_MSG_WARN([silently not building ]modname[.])
		AC_MSG_WARN([FAILURE: ]modname[ requires: $fail.]);
		targetname=""
	fi
fi


AC_SUBST(raw_cflags)
AC_SUBST(raw_ldflags)

AC_CONFIG_HEADER(config.h)  # delete if you don't want a config.h file.

AC_SUBST(targetname)
AC_OUTPUT(Makefile)
